hphp/test/zend/good/tests/lang/bug27354.php
<?php
	var_dump(-2147483647 % -1);
	var_dump(-2147483649 % -1);
	var_dump(-2147483648 % -1);
	var_dump(-2147483648 % -2);
?>