hphp/test/zend/bad/ext/spl/tests/splDoublyLinkedList_shift_noParams.php
<?php
$ll = new SplDoublyLinkedList();
$ll->push(1);
$ll->push(2);

var_dump($ll->shift(1));
?>